--- a/package.json
+++ b/package.json
@@ -14,8 +14,16 @@
     "ts"
   ],
   "author": "Jasbir Raj Rana",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "inquirer": "^8.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jasbirrajrana/tsconfig.json.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jasbirrajrana/tsconfig.json/issues"
+  },
+  "homepage": "https://github.com/jasbirrajrana/tsconfig.json"
 }
