--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-Configs",
+  "name": "tsconfig-n",
   "version": "1.0.0",
   "description": "Quickly create an opinionated tsconfig.json Based on your choice :)",
   "main": "src/index.js",
